# colbert-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
colbert_from_scratch/: __init__.py  maxsim.py  viz.py
data/: toy_retrieval.json
notebooks/: 01_maxsim_in_five_lines.ipynb  02_bow_vs_embeddings.ipynb  03_the_heatmap.ipynb  04_the_clever_bits.ipynb  05_training_colbert.ipynb  06_what_colbert_learns.ipynb
part2/: __init__.py  analysis.py  encoder.py  model.py  tokenize.py  training.py
tests/: test_data.py  test_maxsim.py  test_viz.py
