[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colbert-from-scratch"
version = "0.1.0"
description = "A ground-up implementation of ColBERT's late interaction retrieval model"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24,<3.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
    "torch>=2.0,<3.0",
    "transformers>=4.30,<5.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0,<2.0",
    "pytest>=7.0,<9.0",
    "sentence-transformers>=2.2,<4.0",
]

[tool.setuptools.packages.find]
include = ["colbert_from_scratch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
